# BackgroundJobs

./: Cargo.toml
src/: cmd.rs  main.rs  task.rs
src/daemon/: cmd.rs  kill.rs  mod.rs  runner.rs  service.rs  start.rs  task.rs
src/ipc/: client.rs  server.rs  service.rs
src/utils/: logging.rs  mod.rs  paging.rs
