[package]
name = "bjobs"
version = "0.1.1"
edition = "2021"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
license = "Apache-2.0"
description = "A background jobs manager"
readme = "README.md"
repository = "https://github.com/ClementNerma/BJobs"

[[bin]]
name = "bjobs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.21", features = ["derive"] }
colored = "2.0.0"
command-group = "1.0.8"
daemonize-me = "2.0.1"
dirs = "4.0.0"
once_cell = "1.14.0"
os_pipe = "1.0.1"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
tabular = "0.2.0"
time = { version = "0.3.14", features = ["local-offset", "formatting"] }
