[package]
name = "bjobs"
version = "0.4.0"
edition = "2021"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
license = "Apache-2.0"
description = "A background jobs manager"
repository = "https://github.com/ClementNerma/BJobs"

[[bin]]
name = "bjobs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
command-group = "2.1.0"
daemonize-me = "2.0.1"
dirs = "4.0.0"
once_cell = "1.17.1"
os_pipe = "1.1.3"
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
serde = { version = "1.0.155", features = ["derive", "rc"] }
serde_json = "1.0.94"
tabular = "0.2.0"
time = { version = "0.3.20", features = ["local-offset", "formatting"] }
